--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,61 @@
 /* Ini file CSS */
+
+body {
+    font-family: sans-serif;
+    color: #D5CEA3;
+    background-color: #3D0000;
+}
+
+main {
+    max-width: 550px;
+    justify-self: center;
+
+    /* Background matter */
+    background-color: #630606;
+    border-radius: 14px;
+    padding: 10px;
+}
+
+.main-header {
+    text-align: center;
+}
+
+section {
+    padding: 8px;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
+}
+
+input {
+    width: 100%;
+    padding: 14px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: 3px solid #ccc;
+    -webkit-transition: 0.5s;
+    transition: 0.5s;
+    outline: none;
+}
+
+input[type=number]:focus {
+    border: 4px solid #555;
+}
+
+.button-group {
+    margin-top: 16px;
+}
+
+button {
+    background-color: #1D1616;
+    color: #EEEEEE;
+    border: none;
+    padding: 8px;
+    border-radius: 4px;
+}
+
+footer {
+    text-align: center;
+}
